2012-08-30  Andrey Kosyakov  <caseq@chromium.org>

        REGRESSION(r127039): It broke inspector/timeline/timeline-load.html fails on many platforms
        https://bugs.webkit.org/show_bug.cgi?id=95414

        Unreviewed. Remove stray InspectorTest.completeTest() from a method that is called from several test cases.

        * inspector/timeline/timeline-load.html:

2012-08-30  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt][WK2] Unreviewed gardening, unskip now passing tests.

        * platform/qt-5.0-wk2/Skipped:

2012-08-30  Andrei Onea  <onea@adobe.com>

        [CSSRegions]Add support for text-shadow in region styling
        https://bugs.webkit.org/show_bug.cgi?id=94472

        Reviewed by David Hyatt.

        Added test for region styling on the text shadow property.

        * fast/regions/region-style-text-shadow-expected.html: Added.
        * fast/regions/region-style-text-shadow.html: Added.

2012-08-30  Zan Dobersek  <zandobersek@gmail.com>

        Unreviewed GTK gardening.

        Adding a platform-specific baseline that's required after r127117.

        Fixing expectations for a couple of tests that were gardened in r127109.
        They are both reftests so image failures are occurring.

        * platform/gtk/TestExpectations:
        * platform/gtk/fast/events/set-attribute-listener-window-onerror-crash-expected.txt: Added.

2012-08-30  Anton Muhin  <antonm@chromium.org>

        Update test expectations to follow common guidelines.
        https://bugs.webkit.org/show_bug.cgi?id=95442

        Reviewed by Csaba Osztrogonác.

        Follow up to https://trac.webkit.org/changeset/127117

        * fast/events/set-attribute-listener-window-onerror-crash-expected.txt:
        * platform/chromium/fast/events/set-attribute-listener-window-onerror-crash-expected.txt: Added.

2012-08-30  Mikhail Pozdnyakov  <mikhail.pozdnyakov@intel.com>

        [EFL] Gardening after r127108
        https://bugs.webkit.org/show_bug.cgi?id=95438
